--- a/New folder (3)/quiz/data structure in python.html
+++ b/New folder (3)/quiz/data structure in python.html
@@ -104,7 +104,7 @@
                 { question: "What is the powerhouse of the cell?", options: ["Nucleus", "Mitochondria", "Ribosome"], answer: "Mitochondria" },
                 { question: "Which element has the highest melting point?", options: ["Iron", "Tungsten", "Carbon"], answer: "Tungsten" },
                 { question: "Who developed the theory of relativity?", options: ["Newton", "Einstein", "Galileo"], answer: "Einstein" },
-                { question: "What is the chemical symbol for gold?", options: ["Au", "Ag", "Pb"], answer: "Au" },s
+                { question: "What is the chemical symbol for gold?", options: ["Au", "Ag", "Pb"], answer: "Au" },
                 { question: "Which desert is the largest in the world?", options: ["Sahara", "Antarctica", "Gobi"], answer: "Antarctica" }
             ]
         };
